--- a/src/css/App.css
+++ b/src/css/App.css
@@ -2359,9 +2359,10 @@ html .inputfile-pdf-filecontent, body .inputfile-pdf-filecontent {
 html .input-shownamefile-filecontent, body .input-shownamefile-filecontent {
   display: block;
   margin: 10px auto;
-  width: 80%;
-  height: 35px;
+  width: 90%;
+  height: auto;
   font-size: 16px;
+  font-weight: bold;
   border: 5px solid #9e9e9e;
 }
 html .box-showfile, body .box-showfile {
