--- a/src/App.scss
+++ b/src/App.scss
@@ -2051,6 +2051,7 @@ $colorBGnav:#e0e0e0;
         height: 65%;
         font-size: 16px;
         font-weight: bold;
+        resize: none;
     }
     .tablebox-boxtabletype{
         width: 95%;
@@ -2063,11 +2064,15 @@ $colorBGnav:#e0e0e0;
     }
     .tablebox-normaltabletype{
         width: 95%;
-        height: 95%;
+        // height: 95%;
+        height: 350px;
         scroll-snap-type: mandatory;
         overflow: auto;
         position: relative;
         background-color: #ddd;
+    }
+    .boxDetail-tablebox-normaltabletype{
+        height: 500px;
     }
     
 // modalSetting
@@ -3081,34 +3086,45 @@ $colorBGnav:#e0e0e0;
         width: 80%;
         height: 100%;
         }  
-       .btn-edit-Detail{
-        width: 80%;
-        height: 80px;
-        }  
-        .input-edit-tableShowinfo{
-            width: 100%;
-            height: 80px;
-            font-size: 20px;
-            padding: 0 10px;
-            text-align: center;
-            border: none;
-            background-color: $colorBGnav;
-        }
+        
         .input-editnormal-tableShowinfo{
             width: 100%;
             height: 35px;
             font-size: 20px;
+            font-weight: bold;
             padding: 0 10px;
             border: none;
-            background-color: $colorBGnav;
+            background-color: #f5f5f5;
+        }
+        .button-editnormal-tableShowinfo{
+            width: 90%;
+            height: 30px;
+            font-size: 20px;
+            font-weight: bold;
+            padding: 0 10px;
         }
         .textarea-input-contentSetting{
             width: 100%;
-            height: 80px;
+            // height: 80px;
+            height: 250px;
             font-size: 20px;
             padding: 5px 10px;
-            background-color: $colorBGnav
+            // background-color: $colorBGnav;
+            resize: none;
         }
+        .input-edit-tableShowinfo{
+            width: 100%;
+            height: 250px;
+            font-size: 20px;
+            padding: 0 10px;
+            text-align: center;
+            border: none;
+            // background-color: $colorBGnav;
+        }
+        .btn-edit-Detail{
+            width: 100%;
+            height: 250px;
+        } 
     .tableshowworklisttype-setting{
         width: 100%;
     }
