--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1973,6 +1973,7 @@ html .textarea-contentSetting, body .textarea-contentSetting {
   height: 65%;
   font-size: 16px;
   font-weight: bold;
+  resize: none;
 }
 html .tablebox-boxtabletype, body .tablebox-boxtabletype {
   width: 95%;
@@ -1985,11 +1986,14 @@ html .tablebox-boxtabletype, body .tablebox-boxtabletype {
 }
 html .tablebox-normaltabletype, body .tablebox-normaltabletype {
   width: 95%;
-  height: 95%;
+  height: 350px;
   scroll-snap-type: mandatory;
   overflow: auto;
   position: relative;
   background-color: #ddd;
+}
+html .boxDetail-tablebox-normaltabletype, body .boxDetail-tablebox-normaltabletype {
+  height: 500px;
 }
 html .body-contentsetting-modal, body .body-contentsetting-modal {
   width: 100%;
@@ -2979,33 +2983,40 @@ html .btn-edit-tableShowinfo, body .btn-edit-tableShowinfo {
   width: 80%;
   height: 100%;
 }
-html .btn-edit-Detail, body .btn-edit-Detail {
-  width: 80%;
-  height: 80px;
-}
-html .input-edit-tableShowinfo, body .input-edit-tableShowinfo {
-  width: 100%;
-  height: 80px;
-  font-size: 20px;
-  padding: 0 10px;
-  text-align: center;
-  border: none;
-  background-color: #e0e0e0;
-}
 html .input-editnormal-tableShowinfo, body .input-editnormal-tableShowinfo {
   width: 100%;
   height: 35px;
   font-size: 20px;
+  font-weight: bold;
   padding: 0 10px;
   border: none;
-  background-color: #e0e0e0;
+  background-color: #f5f5f5;
+}
+html .button-editnormal-tableShowinfo, body .button-editnormal-tableShowinfo {
+  width: 90%;
+  height: 30px;
+  font-size: 20px;
+  font-weight: bold;
+  padding: 0 10px;
 }
 html .textarea-input-contentSetting, body .textarea-input-contentSetting {
   width: 100%;
-  height: 80px;
+  height: 250px;
   font-size: 20px;
   padding: 5px 10px;
-  background-color: #e0e0e0;
+  resize: none;
+}
+html .input-edit-tableShowinfo, body .input-edit-tableShowinfo {
+  width: 100%;
+  height: 250px;
+  font-size: 20px;
+  padding: 0 10px;
+  text-align: center;
+  border: none;
+}
+html .btn-edit-Detail, body .btn-edit-Detail {
+  width: 100%;
+  height: 250px;
 }
 html .tableshowworklisttype-setting, body .tableshowworklisttype-setting {
   width: 100%;
